<!--
  ~ Created by Dusan Stankovic on 10/4/16 10:03 AM
  ~ Copyright (c) 2016. All rights reserved.
  ~
  ~ Last modified 10/4/16 9:53 AM
  -->

<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
</resources>
