<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Dusan Stankovic on 10/4/16 9:53 AM
  ~ Copyright (c) 2016. All rights reserved.
  ~
  ~ Last modified 10/4/16 9:53 AM
  -->
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.detrraxic.android.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="My Nanodegree Apps!"/>
    <Button
        android:id="@+id/btnPopularMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="240dp"
        android:text="@string/popular_movies"/>
    <Button
        android:id="@+id/btnStockHawk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="240dp"
        android:text="@string/stock_hawk"/>
    <Button
        android:id="@+id/btnBigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="240dp"
        android:text="@string/build_it_bigger"/>
    <Button
        android:id="@+id/btnMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="240dp"
        android:text="@string/make_your_app_material"/>
    <Button
        android:id="@+id/btnGoUbiquitous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="240dp"
        android:text="@string/go_ubiquitous"/>
    <Button
        android:id="@+id/btnCapstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="240dp"
        android:text="@string/capstone"/>

</LinearLayout>
</ScrollView>